* Makefile.devel (gnulib-update): also get havelib & gettext * gettext.m4, iconv.m4, intdiv0.m4, intmax.m4, inttypes-pri.m4: * inttypes.m4, inttypes_h.m4, nls.m4, po.m4, size_max.m4: * printf-posix.m4, stdint_h.m4, lib-link.m4, lib-prefix.m4: * onceonly.m4: import from gnulib, so move from src/m4 to src/glm4

--- a/Makefile.devel
+++ b/Makefile.devel
@@ -23,7 +23,7 @@ m4/nocrash.m4 : $(CLISP_DIR)/src/m4/nocrash.m4 ; cp -p $< $@-t && mv $@-t $@
 m4/ffcall-pccstruct.m4 : $(CLISP_DIR)/src/m4/ffcall-pccstruct.m4 ; cp -p $< $@-t && mv $@-t $@
 m4/ffcall-smallstruct.m4 : $(CLISP_DIR)/src/m4/ffcall-smallstruct.m4 ; cp -p $< $@-t && mv $@-t $@
 m4/ffcall-ireg.m4 : $(CLISP_DIR)/src/m4/ffcall-ireg.m4 ; cp -p $< $@-t && mv $@-t $@
-m4/longlong.m4 : $(CLISP_DIR)/src/m4/longlong.m4 ; cp -p $< $@-t && mv $@-t $@
+m4/longlong.m4 : $(CLISP_DIR)/src/glm4/longlong.m4 ; cp -p $< $@-t && mv $@-t $@
 m4/cc-void.m4 : $(CLISP_DIR)/src/m4/cc-void.m4 ; cp -p $< $@-t && mv $@-t $@
 m4/stdc-headers.m4 : $(CLISP_DIR)/src/m4/stdc-headers.m4 ; cp -p $< $@-t && mv $@-t $@
 m4/getpagesize.m4 : $(CLISP_DIR)/src/m4/getpagesize.m4 ; cp -p $< $@-t && mv $@-t $@
