--- a/callback/configure.in
+++ b/callback/configure.in
@@ -8,11 +8,11 @@ AC_PROG_GCC_TRADITIONAL
 CL_CC_GCC
 CL_PROG_RANLIB
 AC_PROG_MAKE_SET
-CL_PROG_INSTALL
+AC_PROG_INSTALL
 CL_PROG_CP
 CL_PROG_LN
 CL_PROG_LN_S
-CL_CANONICAL_HOST(../build-aux)
+AC_CONFIG_AUX_DIR(../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 PACKAGE=callback
 AM_DISABLE_SHARED
