--- a/callback/trampoline_r/configure.in
+++ b/callback/trampoline_r/configure.in
@@ -10,11 +10,11 @@ CL_CC_GCC
 CL_AS_UNDERSCORE
 CL_PROG_RANLIB
 AC_PROG_MAKE_SET
-CL_PROG_INSTALL
+AC_PROG_INSTALL
 CL_PROG_CP
 CL_PROG_LN
 CL_PROG_LN_S
-CL_CANONICAL_HOST(../../build-aux)
+AC_CONFIG_AUX_DIR(../../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 PACKAGE=callback
 AM_DISABLE_SHARED
@@ -29,9 +29,6 @@ CL_MMAP
 CL_MPROTECT
 CL_SHM_H
 CL_SHM
-dnl See above. Avoid duplicate warning.
-dnl CL_CANONICAL_HOST(../../build-aux)
-dnl CL_CANONICAL_HOST_CPU_FOR_FFCALL
 CL_CODEEXEC
 CPU_OBJECTS=''
 if test ${host_cpu_abi} = hppa -o ${host_cpu_abi} = powerpc64 -o ${host_cpu_abi} = ia64; then
