--- a/callback/vacall_r/configure.in
+++ b/callback/vacall_r/configure.in
@@ -10,17 +10,14 @@ CL_CC_GCC
 CL_AS_UNDERSCORE
 CL_PROG_RANLIB
 AC_PROG_MAKE_SET
-CL_PROG_INSTALL
+AC_PROG_INSTALL
 CL_PROG_CP
 CL_PROG_LN
-CL_CANONICAL_HOST(../../build-aux)
+AC_CONFIG_AUX_DIR(../../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 PACKAGE=callback
 AM_DISABLE_SHARED
 AM_PROG_LIBTOOL
-dnl See above. Avoid duplicate warning.
-dnl CL_CANONICAL_HOST(../../build-aux)
-dnl CL_CANONICAL_HOST_CPU_FOR_FFCALL
 CL_PCC_STRUCT_RETURN
 CL_SMALL_STRUCT_RETURN
 CL_IREG_FLOAT_RETURN
