--- a/trampoline/configure.in
+++ b/trampoline/configure.in
@@ -10,7 +10,7 @@ CL_CC_GCC
 CL_AS_UNDERSCORE
 CL_PROG_RANLIB
 AC_PROG_MAKE_SET
-CL_PROG_INSTALL
+AC_PROG_INSTALL
 CL_PROG_CP
 CL_PROG_LN
 CL_PROG_LN_S
@@ -24,7 +24,7 @@ CL_MMAP
 CL_MPROTECT
 CL_SHM_H
 CL_SHM
-CL_CANONICAL_HOST(../build-aux)
+AC_CONFIG_AUX_DIR(../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 CL_CODEEXEC
 CPU_OBJECTS=''
