(CL_FFCALL_COMMON_LIBTOOL, CL_FFCALL_COMMON_TRAMPOLINE): add

--- a/trampoline/configure.in
+++ b/trampoline/configure.in
@@ -14,19 +14,10 @@ AC_PROG_INSTALL
 CL_PROG_CP
 CL_PROG_LN
 CL_PROG_LN_S
-CL_VOID
-CL_STDC_HEADERS
-AC_CHECK_HEADERS(unistd_h)
-CL_GETPAGESIZE
-CL_MACH_VM
-CL_OPENFLAGS
-CL_MMAP
-CL_MPROTECT
-CL_SHM_H
-CL_SHM
 AC_CONFIG_AUX_DIR(../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
-CL_CODEEXEC
+AC_CHECK_HEADERS(unistd_h)
+CL_FFCALL_COMMON_TRAMPOLINE
 CPU_OBJECTS=''
 if test ${host_cpu_abi} = hppa -o ${host_cpu_abi} = powerpc64 -o ${host_cpu_abi} = ia64; then
   CPU_OBJECTS="$CPU_OBJECTS "'tramp-$(CPU).o'
