--- a/avcall/configure.in
+++ b/avcall/configure.in
@@ -16,8 +16,7 @@ CL_PROG_LN
 AC_CONFIG_AUX_DIR(../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 PACKAGE=avcall
-AM_DISABLE_SHARED
-AM_PROG_LIBTOOL
+CL_FFCALL_COMMON_LIBTOOL
 CL_PCC_STRUCT_RETURN
 CL_SMALL_STRUCT_RETURN
 CL_IREG_FLOAT_RETURN
