--- a/callback/configure.in
+++ b/callback/configure.in
@@ -15,8 +15,7 @@ CL_PROG_LN_S
 AC_CONFIG_AUX_DIR(../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 PACKAGE=callback
-AM_DISABLE_SHARED
-AM_PROG_LIBTOOL
+CL_FFCALL_COMMON_LIBTOOL
 dnl This piece of sed script replaces every line containing '@subdir@'
 dnl by several consecutive lines, each referencing one subdir.
 extrasub="$extrasub"'
