--- a/callback/trampoline_r/configure.in
+++ b/callback/trampoline_r/configure.in
@@ -17,19 +17,9 @@ CL_PROG_LN_S
 AC_CONFIG_AUX_DIR(../../build-aux)
 CL_CANONICAL_HOST_CPU_FOR_FFCALL
 PACKAGE=callback
-AM_DISABLE_SHARED
-AM_PROG_LIBTOOL
-CL_VOID
-CL_STDC_HEADERS
+CL_FFCALL_COMMON_LIBTOOL
 AC_CHECK_HEADERS(unistd_h)
-CL_GETPAGESIZE
-CL_MACH_VM
-CL_OPENFLAGS
-CL_MMAP
-CL_MPROTECT
-CL_SHM_H
-CL_SHM
-CL_CODEEXEC
+CL_FFCALL_COMMON_TRAMPOLINE
 CPU_OBJECTS=''
 if test ${host_cpu_abi} = hppa -o ${host_cpu_abi} = powerpc64 -o ${host_cpu_abi} = ia64; then
   CPU_OBJECTS="$CPU_OBJECTS "'tramp-$(CPU).lo'
