--- a/callback/configure.in
+++ b/callback/configure.in
@@ -6,7 +6,7 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_GCC_TRADITIONAL
 CL_CC_GCC
-CL_PROG_RANLIB
+AC_PROG_RANLIB
 AC_PROG_MAKE_SET
 AC_CONFIG_AUX_DIR(../build-aux)
 AC_PROG_INSTALL
