--- a/avcall/configure.in
+++ b/avcall/configure.in
@@ -20,5 +20,5 @@ CL_FFCALL_COMMON_LIBTOOL
 CL_PCC_STRUCT_RETURN
 CL_SMALL_STRUCT_RETURN
 CL_IREG_FLOAT_RETURN
-gl_AC_TYPE_LONG_LONG
+AC_TYPE_LONG_LONG_INT
 AC_OUTPUT(Makefile)
