--- a/callback/vacall_r/configure.in
+++ b/callback/vacall_r/configure.in
@@ -20,6 +20,6 @@ CL_FFCALL_COMMON_LIBTOOL
 CL_PCC_STRUCT_RETURN
 CL_SMALL_STRUCT_RETURN
 CL_IREG_FLOAT_RETURN
-gl_AC_TYPE_LONG_LONG
+AC_TYPE_LONG_LONG_INT
 AC_C_CHAR_UNSIGNED
 AC_OUTPUT(Makefile)
