--- a/Makefile.devel
+++ b/Makefile.devel
@@ -56,6 +56,7 @@ configures : $(CONFIGURES)
 
 AUTOCONF_FILES = autoconf/aclocal.m4
 AUTOCONF = autoconf
+AUTOCONF_CACHE = autom4te.cache
 
 configure : configure.in $(AUTOCONF_FILES)
 	$(AUTOCONF) --include=autoconf
@@ -80,6 +81,7 @@ callback/trampoline_r/configure : callback/trampoline_r/configure.in $(AUTOCONF_
 
 check-configures : $(CONFIGURES)
 	set -e; for f in $(CONFIGURES); do bash -x -n $$f; done
+	rm -rf `find . -name $(AUTOCONF_CACHE)`;
 
 avcall/avcall.h.msvc : avcall/avcall.h.in
 	cd avcall ; $(MAKE) -f Makefile.devel avcall.h.msvc
