Made ffcall work on Maemo Fremantle (and perhaps debian-armel).
trampoline, callback/trampoline_r:
Use posix_memalign() + mprotect() instead of malloc() + mprotect() when available.
Fixed ARM CPU cache reset for armel.
Worked around gcc-4.2.1 miscompilation in callback/trampoline_r.

avcall/avcall-armel.c: gcc optimization was removing space for callee's stack frame, worked around that.

--- a/callback/trampoline_r/config.h.in
+++ b/callback/trampoline_r/config.h.in
@@ -40,6 +40,9 @@
 /* Define to 1 if you have the `mprotect' function. */
 #undef HAVE_MPROTECT
 
+/* whether memalign() is available */
+#undef HAVE_POSIX_MEMALIGN
+
 /* have <sys/shm.h> and <sys/ipc.h> and shared memory works */
 #undef HAVE_SHM
 
