--- a/trampoline/config.h.in
+++ b/trampoline/config.h.in
@@ -37,6 +37,9 @@
 /* Define to 1 if you have the `mprotect' function. */
 #undef HAVE_MPROTECT
 
+/* whether posix_memalign() is available */
+#undef HAVE_POSIX_MEMALIGN
+
 /* have <sys/shm.h> and <sys/ipc.h> and shared memory works */
 #undef HAVE_SHM
 
